style.css
/* ... */
.site-content .nav-previous {
  float: left;
  width: 50%;
}
.site-content .nav-next {
  float: right;
  text-align: right;
  width: 50%;
}
/* =Comments
----------------------------------------------- */
#comments-title,
#reply-title {
  display: inline-block;
  font-size: 14px;
  margin-bottom: 20px;
  font-weight: 500;
  line-height: 1em;
  color: #444444;
  padding-bottom: 5px;
  border-bottom: 2px solid #555555;
}
#comments-title [class^="icon-"],
#reply-title [class^="icon-"] {
  font-size: 16px;
  display: inline-block;
  margin-right: 4px;
  line-height: 0.75em;
}
#comments .commentlist {
  margin: 0 0 40px 0;
  list-style: none;
}
#comments .commentlist .children {
  list-style: none;
  margin-left: 75px;
}
#comments .commentlist article {
  margin-bottom: 35px;
}
#comments .commentlist article .avatar {
  float: left;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
}
#comments .commentlist article .comment-author,
#comments .commentlist article .awaiting-moderation,
#comments .commentlist article .comment-meta,
#comments .commentlist article .comment-content {
  margin-left: 75px;
}
#comments .commentlist article .comment-author {
  color: #474747;
  font-size: 13px;
  font-weight: 500;
  line-height: 1em;
  margin-bottom: 0.35em;
}
#comments .commentlist article .comment-author a {
  color: inherit;
  text-decoration: none;
}
#comments .commentlist article .comment-author cite {
  font-style: normal;
}
#comments .commentlist article .comment-meta {
  font-size: 11.5px;
  color: #747474;
  line-height: 1em;
  margin-bottom: 15px;
}
#comments .commentlist article .comment-meta a {
  color: inherit;
  text-decoration: none;
}
#comments .commentlist article .comment-meta .support {
  display: inline-block;
  margin-left: 15px;
}
#comments .commentlist article .awaiting-moderation {
  display: block;
  margin-bottom: 10px;
}
#comments .commentlist article .entry-content {
  font-size: 12px;
}
#comments .commentlist .bypostauthor {
  /* Change the comment by the post author */

}
#commentform label {
  margin-top: 2px;
  display: block;
  float: left;
  width: 25%;
}
#commentform input,
#commentform textarea {
  float: left;
  width: 75%;
  padding: 10px;
  font-size: 13px;
}
#commentform textarea {
  padding: 10px;
}
#commentform input {
  padding: 7px 10px;
}
#commentform p {
  zoom: 1;
  margin-bottom: 20px;
}
#commentform p:before {
  content: '';
  display: block;
}
#commentform p:after {
  content: '';
  display: table;
  clear: both;
}
#commentform p.form-submit {
  margin-bottom: 0;
}
#commentform #submit {
  width: auto;
  font-size: 12px;
  padding: 10px 20px;
}
#commentform .form-allowed-tags,
#commentform .form-allowed-tags code,
#commentform .comment-notes {
  font-size: 0.8em;
  color: #999;
}
#commentform .logged-in-as {
  font-size: 0.8em;
  color: #999;
  margin-bottom: 10px;
  text-align: right;
}
#commentform .required {
  color: #A40802;
}
@media (max-width: 480px) {
  body.responsive #commentform label {
    float: none;
    width: 100%;
    margin-bottom: 3px;
  }
  body.responsive #commentform input,
  body.responsive #commentform textarea {
    float: none;
    width: 100%;
  }
}
/* =Sidebars and Asides
----------------------------------------------- */
#colophon {
  margin-bottom: 20px;
  background: #2f3033;
  padding: 30px;
}
#colophon #theme-attribution,
#colophon #site-info {
  text-align: center;
  margin-top: 25px;
  color: #AAAAAA;
  font-size: 11.5px;
}
#colophon #theme-attribution a,
#colophon #site-info a {
  color: #DDDDDD;
  text-decoration: none;
  font-weight: 500;
}
body.layout-full {
  /* Use the same color as the footer */

  background-color: #2f3033;
}
.layout-full #colophon {
  margin-bottom: 0;
  margin-top: 0;
  padding-top: 30px;
  padding-bottom: 30px;
}
#scroll-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 48px;
  height: 48px;
  background: url(./images/sprites/to-top.png);
  -ms-transform: scale(0, 0);
  -webkit-transform: scale(0, 0);
  transform: scale(0, 0);
  opacity: 0;
  -webkit-transition: all 0.2s ease;
  -moz-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
@media screen and (-webkit-min-device-pixel-ratio: 2) {
  #scroll-to-top {
    background-image: url(./images/retina/to-top.png);
    background-size: 48px 48px;
  }
}
#scroll-to-top.displayed {
  -ms-transform: scale(1, 1);
  -webkit-transform: scale(1, 1);
  transform: scale(1, 1);
  opacity: 1 !important;
}
/* =Sliders
----------------------------------------------- */
/* Resets */
.flex-container a:active,
.flexslider a:active,
.flex-container a:focus,
.flexslider a:focus {
  outline: none;
}
.slides,
.flex-control-nav,
.flex-direction-nav {
  margin: 0;
  padding: 0;
  list-style: none;
}
/* Necessary Styles */
.flexslider {
  margin: 0;
  padding: 0;
  zoom: 1;
  position: relative;
}
.flexslider .slides {
  list-style: none;
  zoom: 1;
}
.flexslider .slides:before {
  content: '';
  display: block;
}
.flexslider .slides:after {
  content: '';
  display: table;
  clear: both;
}
.flexslider .slides > img {
  width: 100%;
  height: auto;
  display: block;
  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
}
.flexslider .slides p img {
  width: auto;
  display: inline-block;
}
.flexslider .slides .flex-caption {
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 20px;
  text-decoration: none;
  background: rgba(0, 0, 0, 0.5);
  color: #FFF;
  text-align: center;
}
.flexslider .slides .flex-caption h3 {
  color: inherit;
  margin: 0;
  line-height: 1.25em;
  font-size: 15px;
}
/* ... */

